# fast-vollib

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  release-testpypi.yml  release.yml  tests.yml
api/: index.html
backends/: index.html
benchmarks/: index.html
changelog/: index.html
compatibility/: index.html
docs/: api.md  backends.md  benchmarks.md  changelog.md  compatibility.md  differentiable_iv.md  index.md  installation.md  jackel.md  phoenix.md  quickstart.md  surface.md
installation/: index.html
notebooks/: fast_vollib_comparison.ipynb  fast_vollib_experiments.ipynb  fast_vollib_tutorial.ipynb  wrds_iv_accuracy.ipynb
quickstart/: index.html
scripts/: benchmark.py  compare_against_py_vollib_vectorized.py  jackel_triton_bench.py  wrds_benchmark.py
scripts/env/: generic_node.md  generic_node.sh  phoenix.md  phoenix.sh
search/: search_index.json
src/fast_vollib/: __init__.py  _typing.py  api.py  config.py  dataframe.py  greeks.py  implied_volatility.py  models.py  types.py
src/fast_vollib/backends/: __init__.py  jax_backend.py  numba_backend.py  numpy_backend.py  torch_backend.py  triton_kernels.py
src/fast_vollib/compat/: __init__.py  auto_patch.py  py_vollib.py  py_vollib_vectorized.py
src/fast_vollib/diagnostics/: __init__.py  plots.py
src/fast_vollib/jackel/: __init__.py  differentiable.py  differentiable_jax.py  jackel_iv.py  jax_backend.py  numpy_backend.py  torch_backend.py  triton_kernels.py
src/fast_vollib/surface/: __init__.py  _xp.py  arbitrage.py  density.py  grid.py  metrics.py  penalty.py  report.py  transforms.py
src/fast_vollib/utils/: __init__.py  broadcast.py  formatting.py
src/fastiv/: api.py  config.py  models.py
src/fastiv/backends/: base.py  jax_backend.py  numpy_backend.py  torch_backend.py  triton_kernels.py
src/fastiv/compat/: __init__.py  auto_patch.py  py_vollib.py
src/fastiv/utils/: broadcast.py  validation.py
tests/: conftest.py  test_backend_parity.py  test_broadcasting.py  test_dataframe.py  test_greeks.py  test_iv.py  test_jackel_parity.py  test_models.py  test_py_vollib_compat.py  test_py_vollib_vectorized_compat.py  test_tensor_inputs.py  test_typing.py
tests/fixtures/: tests_data_py_vollib.json
tests/numba/: conftest.py
tests/test_jackel/: test_autograd.py  test_autograd_jax.py  test_parity.py
tests/test_numba/: test_numba_parity.py
tests/test_surface/: conftest.py  test_arbitrage.py  test_diagnostics.py  test_grid.py  test_jax_parity.py  test_metrics.py  test_penalty.py
