[project]
name = "fastiv"
version = "0.1.0"
description = "Modern Black, Black-Scholes, and Black-Scholes-Merton pricing and implied volatility with NumPy, PyTorch, and JAX backends."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Raeid Saqur" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.1",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
jax = ["jax>=0.4.30", "jaxlib>=0.4.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastiv"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
bench = [
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
