[project]
name = "fast-vollib"
dynamic = ["version"]
description = "Modern Black, Black-Scholes, and Black-Scholes-Merton pricing and implied volatility with NumPy, PyTorch, and JAX backends."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Raeid Saqur", email = "raeid.saqur@maths.ox.ac.uk" }
]
maintainers = [
    { name = "Raeid Saqur", email = "raeid.saqur@maths.ox.ac.uk" }
]
keywords = [
    "options",
    "volatility",
    "volatility-models",
    "black-scholes",
    "neural-networks",
    "finance",
    "greeks",
    "quantitative-modeling",
    "quantitative-finance",
    "derivatives",
    "implied-volatility",
    "arbitrage-free",
    "volatility-surface",
    "kernel-fusion",
    "finance-application",
    "finance-library",
    "finance-toolkit",
    "py-vollib",

]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas",
    "joblib>=1.3.0",
    "psutil>=7.1.3",
]

[project.urls]
Homepage = "https://raeidsaqur.github.io/fast-vollib/"
Documentation = "https://raeidsaqur.github.io/fast-vollib/"
Repository = "https://github.com/raeidsaqur/fast-vollib"
Issues = "https://github.com/raeidsaqur/fast-vollib/issues"
Changelog = "https://github.com/raeidsaqur/fast-vollib/blob/main/docs/changelog.md"

[project.optional-dependencies]
torch = [
    "torch>=2.5",
    "setuptools",
]
jax = ["jax>=0.4.30"]

# Numba-accelerated BS pricing
numba = [
    "numba>=0.60.0",
]

# Opt-in shape-aware runtime type checking for the public API.
# Pure annotations only; no decorators on hot paths. Default install
# does not import jaxtyping (see fast_vollib._typing).
typecheck = [
    "jaxtyping>=0.2",
    "beartype>=0.18",
]
notebooks = [
    "matplotlib>=3.8",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "py-vollib-vectorized",
    "pyarrow>=15.0",
]
cuda = [
    "torch>=2.5; sys_platform == 'linux'",
    "jax[cuda13]; sys_platform == 'linux'",
    # RAPIDS — requires CUDA 13.0 and the nvidia PyPI index (see [tool.uv.sources])
    "cudf-cu13; sys_platform == 'linux'",
    "cuvs-cu13; sys_platform == 'linux'",
]

[tool.uv]
default-groups = ["dev"]
index = [
    { name = "pytorch-cu130", url = "https://download.pytorch.org/whl/cu130", explicit = true },
    { name = "nvidia-pypi", url = "https://pypi.nvidia.com", explicit = true },
]

[tool.uv.sources]
# PyTorch 2.9.1 + CUDA 13.0 wheels on Linux; CPU/MPS default index elsewhere.
torch       = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
# RAPIDS (cudf, cuvs): CUDA 13 wheels from nvidia PyPI, opt-in via --extra cuda.
cudf-cu13 = [{ index = "nvidia-pypi", marker = "sys_platform == 'linux' and extra == 'cuda'" }]
cuvs-cu13 = [{ index = "nvidia-pypi", marker = "sys_platform == 'linux' and extra == 'cuda'" }]

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/fast_vollib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_vollib"]

[tool.mypy]
python_version = "3.11"
files = ["src/fast_vollib"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7.0",
    "py-lets-be-rational>=1.0.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
bench = [
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


# --- Formatting and Linting Tools Configuration -- #
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
# See ruff.toml for comprehensive linting and formatting rules.
line-length = 100
target-version = "py311"
